I have continued changing the parent changing mechanism